# egorVD1_23

games_project_subbotin/: Makefile  pyproject.toml
games_project_subbotin/VD_games/: cli.py  engine.py
games_project_subbotin/VD_games/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  VD_prime.py  VD_progression.py
