[project]
name = "games-project-subbotin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md" 
requires-python = ">=3.12" 
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-calc = "VD_games.scripts.VD_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
VD-progression = "VD_games.scripts.VD_progression:main"
VD-prime = "VD_games.scripts.VD_prime:main"

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
